# PAWSv2

./: ALU-new.si  ALU-old.si  ALU.ice  ALU.si  CPU.ice  CPU.si  FPU.ice  FPU.si  FPU32.si  FPU64.si  FPU_FSM.si  FPU_NEW.si  FPU_OLD.si  FPU_PIPE.si  GPU.ice  GPU.si  LICENSE  PAWS-32.si  PAWS-32D.si  PAWS-32DI.si  PAWS-Donly.si  PAWS-L1.si  PAWS-singlecache.ice  PAWS.ice  PAWS.si  README.md  WIP.si  audio.ice  audio.si  background.ice  background.si  bitmap.ice  bitmap.si  character_map.ice  character_map.si  circuitry.ice  circuitry.si  cpu_functionblocks.ice  cpu_functionblocks.si  definitions.ice  (+16 more)
Programming Guide/: .~lock.Background Layer.odt#  Audio Table.odt  Audio.odt  Background Layer.odt  Programming Guide.odt  Sprite Layer.odt
ROM/: BIOS.inc  VBIOS.inc
ROM/BIOS/: compile_BIOS.sh  compile_VBIOS.sh  config_c.ld  crt0.c
ROM/BIOS/c/: BIOS.c  (+2 more)
RV32/: ALU.si  CPU.si  FPU32.si  FPU64.si  GPU.si  PAWS.si  audio.si  background.si  bitmap.si  caches.si  circuitry.si  cpu_functionblocks.si  io_memmap.si  sprite_layer.si  terminal.si  tile_map.si  timers_random.si  video_memmap.si
RV32/ULX3S/: Makefile  PAWS-ULX3S.ice
RV32/common/: mcp7940n.v
RV64/: ALU.si  CPU.si  DMA.si  FPU64.si  GPU.si  MEMORY.si  PAWS.si  audio.si  background.si  bitmap.si  caches.si  character_map.si  circuitry.si  cpu_functionblocks.si  definitions.si  io_memmap.si  multiplex_display.si  sprite_layer.si  terminal.si  tile_map.si  tile_map_64.si  timers_random.si  video_memmap.si
RV64/ULX3S/: PAWS-ULX3S.ice
RV64/common/: audio_pwm.si  clock_PAWS-sdram100.v  hdmi.ice  ps2.si  sdcard_write.si
RV64/documentation/: Programming Guide.odt
Resources/: PAWSv2.xcf
SOFTWARE/: compile.sh  config_c_SDRAM.ld
SOFTWARE/c/: GALAXY_BMP.h  PAWS.h  PAWSdefinitions.h  PAWSlibrary.c  PAWSlibrary.h  ant.c  ascii-invaders.c  asteroids.c  bluewindow.c  chess.c  config_c_SDRAM-lto.ld  config_c_SDRAM.ld  copper.c  crt0.c  demo.c  drawlist.c  forth.c  jpeg-colour.c  jpeg-grey.c  keyboard.c  life.c  makefile-clang.inc  makefile-fast-lto.inc  makefile-fast.inc  makefile-lto.inc  makefile-paws.inc  makefile-smt.inc  makefile.inc  mandelbrot.c  maze.c  outrun.c  ppm2bitmap.c  raytracing-grey.c  raytracing.c  scale.c  smttest.c  spaceinvaders.c  template.c  terminal-test.c  tune.c
SOFTWARE/c/mc1-quake/WinQuake/: .clang-format  CMakeLists.txt  Makefile  Makefile.mc1  cl_input.c  cl_main.c  cl_tent.c  client.h  cmd.c  common.c  common.h  console.c  cvar.c  d_edge.c  d_iface.h  d_polyse.c  d_scan.c  d_scan_mr32.s  draw.c  in_mc1.c  in_paws.c  math.s  mathlib.c  mc1-toolchain.cmake  net_main.c  net_none.c  nonintel.c  pr_cmds.c  quakedef.h  r_draw.c  r_surf.c  r_surf_mr32.s  screen.c  snd_paws.c  sys_mc1.c  sys_paws.c  vid_mc1.c  vid_paws.c  view.c  wad.c  (+2 more)
SOFTWARE/resources/: gimp-palette.txt
ULX3S/: .PAWS-ULX3S.ice.kate-swp  PAWS-ULX3S.ice  verilator_output.txt
ULX3S/BUILD_ulx3s/: PAWS.bit  PAWSv2-32.bit  PAWSv2-64.bit  PAWSv2-MEMTEST.bit  PAWSv2-TEST.bit  PAWSv2.bit  build.svf
common/: audio_pwm.ice  audio_pwm.si  clock_PAWS-CPU.v  clock_PAWS-sdram100.v  clock_PAWS-sdram150.v  clock_cpu.v  clock_system-sdram150.v  hdmi.ice  mcp7940_i2c.si  ps2.ice  ps2.si  sdcard.ice  sdcard_write.si  sdram_controller_autoprecharge_r16_w16.ice  sdram_utils.ice  vga.ice
common/emard/: i2c_master.v  rtc-wrapper.v  ulx3s_85f_mcp7940n.bit
documentation/: Programming Guide.odt
documentation/Audio/: Audio Calculations-PWM.ods  Audio Calculations.ods  Frequency Table.csv  New-Audio Calculations.ods  Sine.csv
resources/: LibreSprite-Palette.ase  gimp-palette.txt
resources/utility/: dumpsprite
(+727 files in other folders)
